--- a/fundamentos/bloco-3/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -5,21 +5,47 @@
     <title>HTML</title>
     <style>
         h1 {
+        font-family: sans-serif;
         font-size: 65px;    
         color: orange;
+        text-align: center;
         }
         .color {
             background-color: tomato
+        }
+        p {
+        font-style: italic;
+          font-weight: 600;
+        font-size: 3em;
+        }
+        body {
+        font-size: 16px;
+
+        }
+        .corA {
+        background-color: yellow;
+        text-decoration: underline;
+        line-height: 40px;
+        }
+        .corV {
+        background-color: red;
+        text-decoration: underline;
+        line-height: 40px;
+        }
+        .corM {
+        background-color: brown;
+        text-decoration: underline;
+        line-height: 40px;
         }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="color">Qual é a sua cor favorita?</p>
-    <ul class="color">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+    <ul>
+      <li class="corA">Amarelo</li>
+      <li class="corV">Vermelho</li>
+      <li class="corM">Marrom</li>
     </ul>
   </body>
 </html>
