Adiciona arquivos e estudo sobre inline e block

--- a/fundamentos/bloco-3/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3/dia-4-html-semantico/index.html
@@ -17,7 +17,7 @@
     <main>
         <article>
           <header><h2>Fatos sobre o Stomatopoda</h2></header>
-          <p><em>Odontodactylus scyllarus</em></p>
+          <p><em>(Odontodactylus scyllarus)</em></p>
           <table>
             <tr>
               <th>Reino</th>
@@ -45,21 +45,21 @@
             </tr>
           </table>
         </article>
-        <section class="fato">
-          <div class="fato">
+        <section class="fatos">
+          <div class="fato1">
             <h3 class="fato">CORES</h3>
-            <img class="foto-fato" src="https://i.pinimg.com/564x/40/51/b1/4051b15b8e03a2c7b7f7afc9d5d91e52.jpg" alt="">
-            <p class="fato">O Stomatopoda consegue enxergar a combinação de <strong>16 cores</strong>.</p>
+            <br><img class="foto-fato" src="https://i.pinimg.com/564x/40/51/b1/4051b15b8e03a2c7b7f7afc9d5d91e52.jpg" alt="">
+            <br><p class="fato">O Stomatopoda consegue enxergar a combinação de <strong>16 cores</strong>.</p>
           </div>
-          <div class="fato">
+          <div class="fato2">
             <h3 class="fato">BELEZA</h3>
-            <img class="foto-fato" src="http://2.bp.blogspot.com/-52ZsBnuNV54/T7uLw2V0DjI/AAAAAAAAFr0/vEkX1Izj80w/s1600/mantis.jpg" alt="">
-            <p class="fato">O Stomatopoda é maravilhoso! Tem os <strong>olhos parecidos com um louva-a-deus</strong> e possui uma cauda escamosa.</p>
+            <br><img class="foto-fato" src="http://2.bp.blogspot.com/-52ZsBnuNV54/T7uLw2V0DjI/AAAAAAAAFr0/vEkX1Izj80w/s1600/mantis.jpg" alt="">
+            <br><p class="fato">O Stomatopoda é maravilhoso! Tem os <strong>olhos parecidos com um louva-a-deus</strong> e possui uma cauda escamosa.</p>
           </div>
-          <div class="fato">
+          <div class="fato3">
             <h3 class="fato">VIOLÊNCIA</h3>
-            <img class="foto-fato" src="https://2.bp.blogspot.com/-hacI2IsX1dw/WwWLGSGyhjI/AAAAAAAAP5c/vAfRQ4atOJ8AoAi0JyYfF8RoxxzrgD7QwCLcBGAs/s640/29113352422121-t1200x480.jpg" alt="">
-            <p class="fato">O Stomatopoda consegue <strong>quebrar aquários</strong>.</p>
+            <br><img class="foto-fato" src="https://2.bp.blogspot.com/-hacI2IsX1dw/WwWLGSGyhjI/AAAAAAAAP5c/vAfRQ4atOJ8AoAi0JyYfF8RoxxzrgD7QwCLcBGAs/s640/29113352422121-t1200x480.jpg" alt="">
+            <br><p class="fato">O Stomatopoda consegue <strong>quebrar aquários</strong>.</p>
           </div>
         </section>
         <section>
