--- a/fundamentos/bloco-6/dia-1-html-css-forms/form.html
+++ b/fundamentos/bloco-6/dia-1-html-css-forms/form.html
@@ -4,22 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercício de Fixação: box model</title>
+  <title>Exercício 6.1</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Submeter palestra</h1>
-        <p>Quer palestrar na nossa conferência? Preencha o formulário!</p>
+        <h1>Cadastre seu currículo!</h1>
+        <p>Preencha os dados</p>
     </header>
 
     <main>
         <form action="" method="get">
-            <label for="full-name-id">Nome</label>
-                <input type="text" name="full-name" id="full-name-id" required>
+            <fieldset>
+                <legend>Dados pessoais:</legend>
+                <label for="full-name-id">Nome</label>
+                <input type="text" name="full-name" maxlength=40 id="full-name-id" required>
+                <br><br>
+                <label for="email">Email</label>
+                <input type="email" name="email" maxlength=50 id="email" required>
+                <br><Br>
+                <label for="cpf">CPF</label>
+                <input type="text" name="cpf" maxlength=11 id="cpf" required>
+                <br><br>
+                <label for="adress">Endereço</label>
+                <input type="text" name="adress" maxlength=200 id="adress" required>
+                <br>
+            </fieldset>
         <br>
         <br>
-                <fieldset>
+        <fieldset>
             <legend>Tipo de palestra</legend>
             <input type="radio" name="talk-type" value="main-stage" id="talk-type-1">
             <label for="talk-type-1">Palco principal</label>
