Arquivos comitados em blocos anteriores

--- a/fundamentos/bloco-5/dia-1-dom/exercicios.html
+++ b/fundamentos/bloco-5/dia-1-dom/exercicios.html
@@ -57,6 +57,9 @@
         //Crie uma função que mude o texto na tag <p> para uma descrição de como você se vê daqui a 2 anos.
         let perspectiva = document.getElementsByTagName("p");
         perspectiva[1].innerText = "Em dois anos me imagino construindo minha casa no mato, plantando uma agrofloresta enquanto programo.";
+        // Crie uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+        let corDeFundo = document.getElementsByClassName("main-content");
+        corDeFundo[0].corDeFundo = rgb(76,164,109);
     </script>
   </body>
 </html>
